--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^3.0.0",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
@@ -14,6 +15,7 @@
     "morgan": "~1.9.0"
   },
   "devDependencies": {
-    "ejs": "^2.6.1"
+    "ejs": "^2.6.1",
+    "mysql": "^2.16.0"
   }
 }
