--- a/server/package.json
+++ b/server/package.json
@@ -12,9 +12,11 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "multer": "^1.3.1"
   },
   "devDependencies": {
+    "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "mysql": "^2.16.0"
   }
