--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,11 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "dev-start": "forever start -o logs/out.log -e logs/err.log ./bin/www",
+    "dev-stop": "forever stop ./bin/www",
+    "pro-start": "pm2 start ecosystem.config.js",
+    "pro-kill": "pm2 kill",
+    "pro-update": "pm2 update keepfurBlog",
     "start": "node ./bin/www"
   },
   "dependencies": {
@@ -10,10 +15,12 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
+    "forever": "^0.15.3",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "morgan": "~1.9.0",
-    "multer": "^1.3.1"
+    "multer": "^1.3.1",
+    "pm2": "^3.1.3"
   },
   "devDependencies": {
     "body-parser": "^1.18.3",
